[package]
name = "environment-map-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", features = ["jpeg"] }
bevy_egui = { git = "https://github.com/DGriffin91/bevy_egui" }
bytemuck = "1.9"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
